Adicionado um algoritmo melhor para busca.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".firebase.db.ListaReceitasActivity" />
+        <activity android:name=".firebase.db.searchActivity.ListaReceitasActivity" />
         <activity
             android:name=".firebase.auth.AuthActivity"
             android:label="@string/title_activity_auth"
