--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,11 +19,18 @@ android {
     }
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
+
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:cardview-v7:26.+'
@@ -31,12 +38,11 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.google.firebase:firebase-database:10.0.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
-
-
-    testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
-
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+    testCompile 'junit:junit:4.12'
 }
+
 
 
 
