--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
     testCompile 'junit:junit:4.12'
     compile 'com.getbase:floatingactionbutton:1.10.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 }
 
