Timer vibra arrumado

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,5 +45,5 @@
             android:screenOrientation="fullSensor"
             tools:replace="screenOrientation" />
     </application>
-
+    <uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
