--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bela.es2017">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,9 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".firebase.db.searchActivity.ListaReceitasActivity" />
         <activity
             android:name=".firebase.auth.AuthActivity"
@@ -26,7 +26,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".Estoque"
@@ -34,16 +33,17 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Codigo_de_barras" />
         <activity android:name=".Ingredientes" />
-        <activity android:name=".Adicionar_receita"></activity>
-        <activity android:name=".LeitorDeBarras"></activity>
+        <activity android:name=".Adicionar_receita" />
+        <activity android:name=".LeitorDeBarras" />
         <activity
             android:name=".timer.TimerActivity"
             android:label="@string/title_activity_timer"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".timer.Timer2Activity"></activity>
-            android:name="com.journeyapps.barcodescanner.CaptureActivity"
-            android:screenOrientation="fullSensor"
-            tools:replace="screenOrientation" />
+        <activity android:name=".timer.Timer2Activity" />
+        android:name="com.journeyapps.barcodescanner.CaptureActivity"
+        android:screenOrientation="fullSensor"
+        tools:replace="screenOrientation" />
+        <activity android:name=".conversor.ConversorActivity"></activity>
     </application>
-    <uses-permission android:name="android.permission.VIBRATE" />
+
 </manifest>
