--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,9 +47,13 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:26.+'
+
     testCompile 'junit:junit:4.12'
 }
 
+android {
+    useLibrary 'org.apache.http.legacy'
+}
 
 
 
