--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".firebase.db.searchActivity.ListaReceitasActivity" />
         <activity
             android:name=".firebase.auth.AuthActivity"
@@ -33,8 +33,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Codigo_de_barras" />
         <activity android:name=".Ingredientes" />
-        <activity android:name=".Adicionar_receita" />
+        <activity android:name=".Adicionar_receita"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".LeitorDeBarras" />
+        <activity android:name=".texttospeech.TTSActivity" />
         <activity
             android:name=".timer.TimerActivity"
             android:label="@string/title_activity_timer"
@@ -43,7 +45,7 @@
         android:name="com.journeyapps.barcodescanner.CaptureActivity"
         android:screenOrientation="fullSensor"
         tools:replace="screenOrientation" />
-        <activity android:name=".conversor.ConversorActivity"></activity>
+        <activity android:name=".conversor.ConversorActivity" />
     </application>
 
 </manifest>
