Terminada primeira versão de adicionar receita integrada com Firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Estoque.Add_Ing_Estoque.AddIngredientes" />
         <activity android:name=".Add_receita.Adicionar_receita"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".leitordebarras.LeitorDeBarras" />
         <activity android:name=".texttospeech.TTSActivity" />
