--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     compile 'com.getbase:floatingactionbutton:1.10.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:26.+'
-
+    compile 'org.apache.commons:commons-math3:3.6.1'
     testCompile 'junit:junit:4.12'
 }
 
