--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,9 @@ dependencies {
 
 
 
+    compile "com.android.support:appcompat-v7:26.+"
+    compile "com.android.support:palette-v7:26.+"
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:recyclerview-v7:26.+'
     compile 'com.android.support:cardview-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -48,12 +49,17 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v4:26.+'
     compile 'org.apache.commons:commons-math3:3.6.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
+
+
+    compile 'com.firebaseui:firebase-ui-storage:1.1.1'
     testCompile 'junit:junit:4.12'
 }
 
 android {
     useLibrary 'org.apache.http.legacy'
 }
+
 
 
 
