--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bela.es2017">
-
+    <uses-sdk tools:overrideLibrary="com.firebase.ui"/>
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
