--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.android.support:support-v4:26.+'
     compile 'org.apache.commons:commons-math3:3.6.1'
     compile 'com.google.firebase:firebase-storage:10.0.1'
+    compile 'me.xdrop:fuzzywuzzy:1.1.9'
 
 
     compile 'com.firebaseui:firebase-ui-storage:1.1.1'
