--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,10 +7,10 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+
         android:supportsRtl="true"
+
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -40,6 +40,16 @@
         <activity android:name=".texttospeech.TTSActivity" />
         <activity android:name=".leitordebarras.BarrasEntradaPopup"
            />
+        <activity android:name=".leitordebarras.AdicionaNoEstoqueActivity"
+            />
+
+        <activity android:name="visualizapasso.ScreenSlideActivity"
+            android:label="Screen Slide"
+            android:parentActivityName=".MainActivity"
+            android:uiOptions="splitActionBarWhenNarrow">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
         <activity
             android:name=".timer.TimerActivity"
             android:label="@string/title_activity_timer"
