Atividade para ver receitas recomendadas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
             />
 
         <activity android:name=".receitaspossiveis.ReceitasPossiveisActivity" />
+        <activity android:name="recomendareceitas.RecomendaReceitasActivity" />
 
         <activity android:name="visualizareceita.VisualizaReceitaActivity"
             android:label="Screen Slide"
